# tokiodreamy-wix-twitch-integration

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  events.js  install.bash  install.sh  overview.svgbob  package-lock.json  rustfmt.toml
.circleci/: config.yml
client/: Cargo.toml
client/src/: main.rs
dashboard/: Cargo.toml
dashboard/src/: app.rs  main.rs  server.rs
entity/: Cargo.toml
entity/src/: lib.rs  order.rs  order_items.rs
frontend/: package-lock.json  package.json  tailwind.config.cjs
frontend/src/: app.css  app.html
frontend/src/components/: Button.svelte  Card.svelte  EnsureLoggedIn.svelte  KeyValueDisplay.svelte  LineItem.svelte  LinkButton.svelte  LoginForm.svelte  Modal.svelte  client.ts  edit.svelte  external-link.svelte  stores.ts  utils.ts
frontend/src/routes/: dashboard.svelte  widget.svelte
frontend/src/routes/(green)/: +layout.svelte
frontend/src/routes/(green)/widget/: +page.svelte
frontend/src/routes/(white)/: +layout.svelte  +page.svelte
frontend/src/routes/(white)/dashboard/: +page.svelte
frontend/src/routes/(white)/queue/: +page.svelte
frontend/src/routes/styled/: __layout.svelte  dashboard.svelte  index.svelte  queue.svelte
frontend/src/routes/widget/: __layout.svelte  widget.svelte
iced-client/: Cargo.toml
iced-client/src/: main.rs  ws_server.rs
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: auth.rs  main.rs  wix_models.rs
src/models/: mod.rs  wix.rs
src/routes/: all_orders.rs  content.rs  login.rs  mod.rs  new_order.rs  order_completed.rs  sse.rs  update_order.rs
src/static/: dashboard.html  index.html  queue.html  widget.html
src/static/_app/: version.json
src/static/_app/immutable/: start-2b1e4ad3.js
src/static/_app/immutable/assets/: LineItem-faa148b9.css  _page-e1705f4a.css  app-ce8ec6de.css
src/static/_app/immutable/chunks/: 0-6a3c50d2.js  1-1eef9986.js  2-65bb86ac.js  3-3c010a02.js  4-53b8a8b0.js  5-065f528b.js  6-fd083963.js  7-069df802.js  EnsureLoggedIn-49af5f1c.js  LineItem-b2efe33e.js  client-7ab338e8.js  index-1b64e03c.js  index-f76e1fc4.js  singletons-f8b5a7dc.js  utils-7662da9b.js
src/static/_app/immutable/components/: error.svelte-2e7cb7fc.js  layout.svelte-cfd3bd60.js
src/static/_app/immutable/components/pages/(green)/: _layout.svelte-bf68f602.js
src/static/_app/immutable/components/pages/(green)/widget/: _page.svelte-fdcc6635.js
src/static/_app/immutable/components/pages/(white)/: _page.svelte-8efd0867.js
src/static/_app/immutable/components/pages/(white)/dashboard/: _page.svelte-9579e39b.js
src/static/_app/immutable/components/pages/(white)/queue/: _page.svelte-a8319e1d.js
widget/: Cargo.toml
widget/src/: app.rs  main.rs  server.rs
wix-models/: Cargo.toml
wix-models/src/: lib.rs
