[package]
name = "tokio-wix-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
time = { version = "0.3.9", features = ["serde", "parsing", "serde-well-known"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
