[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.4", features = ["ws", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
tokio = { version = "1.25.0", features = ["sync", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
# version = "0.6.2"
sqlx = { git = "https://github.com/benluelo/sqlx", branch = "fix-encode-decode-derives", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "json",
    "chrono",
] }
futures = "0.3.26"
parking_lot = "0.12.1"
clap = { version = "4.1.4", features = ["derive"] }
base64 = "0.21.0"
axum-extra = { version = "0.4.2", features = ["spa"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
ts-rs = "6.2.1"
tower = "0.4.13"
