[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
crossbeam = "0.8.1"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
server = { path = "../server" }
models = { path = "../models" }
