[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
iced = { git = "https://github.com/iced-rs/iced", features = [
    "glow",  # NOTE: svg doesn't work with glow backend
    "tokio",
    "debug",
    "pure",
], default-features = false }
crossbeam-channel = "0.5.4"
iced_pure = { git = "https://github.com/iced-rs/iced" }
iced_futures = { git = "https://github.com/iced-rs/iced" }
iced_native = { git = "https://github.com/iced-rs/iced" }
tokio = { version = "1.18.0", features = ["macros", "time"] }
reqwest-eventsource = "0.4.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.81"
models = { path = "../models" }
axum = "0.5.5"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
dotenv = "0.15.0"
parking_lot = "0.12.0"
tokio-stream = { version = "0.1.8", features = ["sync"] }
serde = "1.0.137"
base64 = "0.13.0"
