[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.1", features = ["ws"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
wix-models = { path = "../wix-models" }
entity = { path = "../entity" }
dotenv = "0.15.0"
sqlx = { version = "*", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "json",
    "chrono",
] }
futures = "0.3.21"
