[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.1", features = ["ws"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
models = { path = "../models" }
dotenv = "0.15.0"
sqlx = { version = "0.5.13", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "json",
    "chrono",
] }
futures = "0.3.21"
parking_lot = "0.12.0"
clap = { version = "3.1.18", features = ["clap_derive", "derive"] }
base64 = "0.13.0"
axum-extra = { version = "0.3.3", features = ["spa"] }
