[package]
name = "widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
iced = { git = "https://github.com/iced-rs/iced", features = [
    "glow",
    "tokio",
    "debug",
    "pure",
    "palette",
    "svg",
] }
crossbeam-channel = "0.5.4"
iced_pure = { git = "https://github.com/iced-rs/iced" }
iced_futures = { git = "https://github.com/iced-rs/iced" }
iced_native = { git = "https://github.com/iced-rs/iced" }
tokio = { version = "1.18.0", features = ["macros", "time"] }
reqwest-eventsource = "0.4.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.81"
models = { path = "../models" }
interprocess = "1.1.1"
ipc-channel = "0.16.0"
nats = "0.20.0"
async-nats = "0.13.0"
